--- a/backend/package.json
+++ b/backend/package.json
@@ -16,14 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.1",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "nodemailer": "^7.0.3",
     "validator": "^13.15.15",
-    "xss-clean": "^0.1.4"
+    "xss": "^1.0.15"
   }
 }
