--- a/backend/package.json
+++ b/backend/package.json
@@ -18,12 +18,14 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
+    "file-type": "^15.0.1",
     "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.3",
+    "streamifier": "^0.1.1",
     "validator": "^13.15.15"
   }
 }
