--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "react-select": "^5.10.2",
     "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.10"
   },
